# HtmlGenerators

./: .gitignore  HtmlGenerators.cabal  README.md  stack.yaml
app/: BlazeMain.hs  LucidMain.hs  RunElmServer.hs  RunServantBasic.hs
frontend/src/: Main.elm
src/: BasicServant.hs  BlazeLib.hs  ElmServer.hs  LucidLib.hs  TestingServer.hs
static/: index.html  styles.css
tests/: APITests.hs
