cabal-version: 1.12

name:           HtmlGenerators
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/HtmlGenerators#readme>
homepage:       https://github.com/githubuser/HtmlGenerators#readme
bug-reports:    https://github.com/githubuser/HtmlGenerators/issues
author:         James Bowen
maintainer:     james@mondaymorninghaskell.me
copyright:      2020 Monday Morning Haskell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/HtmlGenerators

library
  exposed-modules:
      BasicServant
      BlazeLib
      ElmServer
      LucidLib
      TestingServer
  other-modules:
      Paths_HtmlGenerators
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , http-media
    , http-types
    , lucid
    , servant
    , servant-server
    , warp
  default-language: Haskell2010

executable gen-blaze
  main-is: BlazeMain.hs
  other-modules:
      Paths_HtmlGenerators
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HtmlGenerators
    , base >=4.7 && <5
    , bytestring
  default-language: Haskell2010

executable gen-lucid
  main-is: LucidMain.hs
  other-modules:
      Paths_HtmlGenerators
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HtmlGenerators
    , base >=4.7 && <5
    , lucid
  default-language: Haskell2010

executable basic-servant
  main-is: RunServantBasic.hs
  other-modules:
      Paths_HtmlGenerators
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HtmlGenerators
    , base >=4.7 && <5
  default-language: Haskell2010

executable elm-server
  main-is: RunElmServer.hs
  other-modules:
      Paths_HtmlGenerators
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HtmlGenerators
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite api-tests
  type: exitcode-stdio-1.0
  main-is: APITests.hs
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HtmlGenerators
    , base >= 4.7 && <5
    , hspec
    , hspec-wai
    , hspec-wai-json
    , servant-quickcheck
    , HtmlGenerators
  default-language: Haskell2010
